--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,6 +7,7 @@ author_profile: true
 
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">(* indicates equal contribution)</div>
 {% endif %}
 
 {% include base_path %}
@@ -32,7 +33,8 @@ author_profile: true
   {% endfor %}
 {% endif %} -->
 
-{% for post in site.publications reversed %}
+{% assign pubs = site.publications | sort: "date" | reverse %}
+{% for post in pubs %}
   {% include archive-single.html %}
 {% endfor %}
 
